--- a/client/public/style.css
+++ b/client/public/style.css
@@ -10,12 +10,29 @@ svg {
 }
 .title {
     font-family: 'Lobster', cursive;
-    font-size: 90px;
+    font-size: 95px;
     color: rgb(71, 172, 231); 
     text-shadow: 0px 5px 10px rgba(69, 131, 189, 0.2);
-    padding: 1%;
+    padding-top: 1%;
+    padding-right: 1%;
+    padding-left: 1%;
     text-align: center;
+} 
+
+.sub-title{
+    text-align: center;
+    font-size: 15px;
 }
+
+.welcome-back{
+    /* font-family: 'Lobster', cursive; */
+    color: rgb(94, 94, 94); 
+    text-shadow: 0px 5px 10px rgba(69, 131, 189, 0.2);
+    font-size: 25px;
+    text-align: center;
+    padding-bottom: 1%
+}
+
 .user-options {
     text-align: right;
     padding-right: 15%;
@@ -73,6 +90,10 @@ svg {
     text-align: center;
 }
 
+.mobile-chart-info{
+    display: none;
+}
+
 .render-data {
     padding-top: 3%;
     border-bottom: 5px solid rgba(180, 180, 180, 0.5);
@@ -83,4 +104,51 @@ svg {
     display: grid;
     grid-template-columns: 10% 30%;
 }
+
+.mobile-render-charts{
+    display: none;
+}
+
+.save-this-city{
+    cursor: pointer;
+}
+
+.save-this-city:hover{
+    color:rgb(64, 157, 233)
+}
 /* -------------------- */
+
+@media (max-width: 750px){
+
+    .sub-title {
+        font-size: 13px
+    }
+    .render-charts {
+       display: none;
+    }
+    
+    .user-options-2{
+        grid-template-columns: 18% 7%;
+    }
+
+    .chart-info {
+        display: none;
+    }
+    .mobile-chart-info{
+        display: grid;
+        grid-template-columns: auto;
+        grid-auto-rows: 1fr 1fr 1fr;
+    }
+    .mobile-render-charts{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+}
+
+@media (max-width: 600px){
+
+    .user-options-2{
+        grid-template-columns: 22% 7%;
+    }
+}
